# undefined-os

./: .gdbinit  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  search-index.js
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: lib.rs  ptr.rs
api/src/core/: mod.rs  random.rs  time.rs
api/src/core/file/: dir.rs  epoll.rs  fd.rs  file.rs  mod.rs  pathfd.rs  pipe.rs  stdio.rs  stub.rs
api/src/core/fs/: dir.rs  epoll.rs  fd.rs  file.rs  mod.rs  mount.rs  pipe.rs  stdio.rs
api/src/core/fs/dynamic/: dynamic.rs  file.rs
api/src/core/fs/imp/: mod.rs  proc.rs  tmp.rs
api/src/core/fs/imp/dev/: framebuffer.rs  mod.rs
api/src/core/fs/imp/proc/: mod.rs  process.rs  task_stat.rs
api/src/core/fs/pseudo/: dir.rs  dynamic.rs  file.rs  mod.rs
api/src/imp/: sys.rs
api/src/imp/fs/: ctl.rs  fd_ops.rs  fs.rs  io.rs  mod.rs  mount.rs  path.rs  pipe.rs  poll.rs  stat.rs  status.rs
api/src/imp/mm/: brk.rs  misc.rs  mmap.rs  mod.rs
api/src/imp/net/: mod.rs  sock.rs  socket.rs
api/src/imp/task/: clone.rs  execve.rs  exit.rs  futex.rs  mod.rs  resource.rs  schedule.rs  signal.rs  thread.rs  wait.rs
api/src/imp/utils/: time.rs
api/src/interface/: mod.rs
api/src/interface/fs/: epoll.rs  fd.rs  io.rs  mod.rs  path.rs  poll.rs  stat.rs
api/src/interface/mm/: shm.rs
api/src/interface/task/: clone.rs  execve.rs  exit.rs  resource.rs
api/src/interface/user/: identity.rs
api/src/interface/utility/: random.rs
api/src/utils/: dev.rs  mod.rs  path.rs  task.rs
apps/libc/c/mmap/: mmap.c
apps/oscomp/: testcase_list
configs/: loongarch64.toml
core/: Cargo.toml
core/src/: entry.rs  lib.rs  mm.rs  process.rs  resource.rs  shared_memory.rs  task.rs
process/src/: process.rs
scripts/: config.toml.temp  get_deps.sh  oscomp_test.sh
search.desc/starry/: starry-desc-0-.js
src/: entry.rs  main.rs  mm.rs  syscall.rs
src/fs/: mount.rs
src/fs/dynamic/: file.rs  mod.rs
src/fs/imp/: dev.rs  proc.rs  tmp.rs
starry/: all.html  index.html  sidebar-items.js
syscall_trace/src/: lib.rs
