[package]
name = "undefined-os-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axconfig.workspace = true
axfs-ng.workspace = true
axns.workspace = true
axhal.workspace = true
axlog.workspace = true
axsync.workspace = true
axtask.workspace = true
axsignal.workspace = true
axalloc.workspace = true
axdriver_display.workspace = true
axio.workspace = true
axnet.workspace = true
arceos_posix_api.workspace = true

axerrno.workspace = true
bitflags.workspace = true
linkme.workspace = true
memory_addr.workspace = true
linux-raw-sys.workspace = true
inherit-methods-macro = "0.1.0"

starry-core.workspace = true
syscall-trace.workspace = true
undefined-process.workspace = true
undefined-vfs.workspace = true

macro_rules_attribute = "0.2"
num_enum = { version = "0.7", default-features = false }
static_assertions = "1.1"
spin = "0.10.0"
bit_field = "0.10.2"
rand_mt = "5.0.0"
lazy_static = "1.5.0"
flatten_objects = "0.2.3"
percpu = { version = "0.2" }
slab = { version = "0.4.10", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
